[aliases]
test = pytest

[versioneer]
VCS = git
style = pep440
versionfile_source = gwvet/_version.py
versionfile_build = gwvet/_version.py
tag_prefix = 
parentdir_prefix =

[metadata]
name = gwvet
author = Alex Urban, Duncan Macleod
author_email = alexander.urban@ligo.org
license = GPL-3.0-or-later
license_file = LICENSE
keywords = physics, astronomy, gravitational-waves, ligo
url = https://github.com/gwpy/vet
description = An extension to the python toolbox GWSumm, used by the LIGO Scientific Collaboration to review data-quality vetoes
long_description = file: README.rst
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires =
	setuptools >=30.3.0
install_requires =
	astropy >=3.0.0
	decorator
	dqsegdb
	gwdetchar >=2.0.0
	gwpy >=2.0.0
	gwsumm >=2.0.0
	gwtrigfind
	lscsoft-glue >=1.60.0
	MarkupPy
	matplotlib >=3.1
	numpy >=1.16
	scipy
tests_require =
	flake8
	pytest >=3.3.0
	pytest-cov >=2.4.0

[options.entry_points]
console_scripts =
	gwvet = gwvet.__main__:main
	gwvet-hug = gwvet.hug:main
	gwvet-vdf = gwvet.vdf.__main__:main

[options.extras_require]
doc =
	sphinx
	numpydoc
	sphinx_rtd_theme
	sphinxcontrib-epydoc

[tool:pytest]
; print skip reasons
addopts = --verbose -r s

; -- tools ------------------

[flake8]
exclude =
	__pycache__,
	.eggs/,
	.git/,
	build/,
	docs/,
	gwvet/_version.py,
	versioneer.py,
